language/tests/error/UndefinedFunction02.hashem
bebin invoke(f) {
  f("hello");
}

bebin f1() {
  bechap("f1");
}

bebin main() {
  invoke(f1);
  invoke(foo);  
}  
